--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
+        "azure-oss/storage": "^1.3",
         "caseyamcl/guzzle_retry_middleware": "^2.12",
         "guzzlehttp/guzzle": "^7.9",
         "guzzlehttp/psr7": "^2.7"
